# streaming-vector

./: .gitignore  README.md  streaming-vector.cabal
src/Control/Foldl/: Delayed.hs
src/Control/Foldl/Delayed/: Window.hs
src/Streaming/: Vector.hs
test/: Spec.hs
