name:                streaming-vector
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/andrewthad/streaming-vector#readme
license:             BSD3
license-file:        LICENSE
author:              Andrew Martin
maintainer:          andrew.thaddeus@gmail.com
copyright:           2017 Andrew Martin
category:            software
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
    Streaming.Vector
    Control.Foldl.Delayed
    Control.Foldl.Delayed.Window
  build-depends:
      base >= 4.7 && < 5
    , vector
    , primitive
    , streaming
  default-language:
    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       
      base
    , streaming-vector
    , streaming
    , QuickCheck
    , doctest
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/andrewthad/streaming-vector
